compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case16.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 525
expression: "case [3], 1.1 { x, y if x <=. y -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case [3], 1.1 { x, y if x <=. y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:25
  │
1 │ case [3], 1.1 { x, y if x <=. y -> 1 }
  │                         ^

Expected type:

    Float

Found type:

    List(Int)
