compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case3.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 460
expression: "case 1, 2.22, \"three\" { x, _, y if x > y -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case 1, 2.22, "three" { x, _, y if x > y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:40
  │
1 │ case 1, 2.22, "three" { x, _, y if x > y -> 1 }
  │                                        ^

Expected type:

    Int

Found type:

    String
