compiler-core/main/__core/type_/tests/snapshots/gleam_core____core__type___tests__errors__case4.snap
---
source: compiler-core/src_refactored/__core/type_/tests/errors.rs
assertion_line: 465
expression: "case [3.33], 1 { x, y if x >= y -> 1 }"
snapshot_kind: text
---
----- SOURCE CODE
case [3.33], 1 { x, y if x >= y -> 1 }

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:26
  │
1 │ case [3.33], 1 { x, y if x >= y -> 1 }
  │                          ^

Expected type:

    Int

Found type:

    List(Float)
